Fix wrong letter spacing in Firefox

--- a/style.css
+++ b/style.css
@@ -28,7 +28,6 @@ p {
 #buttons {
   text-align: center;
   font-size: 0.8em;
-  letter-spacing: 15px;
 }
 
 button {
